# teleportMPD

./: .env_template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Justfile  Makefile  README.md  main.py  mlflow_compose.yaml  properdocs.yml  pyproject.toml  update_template.py
.github/actions/validation/: action.yaml
.github/workflows/: main-validate.yaml  pages.yml  publish.yaml
configs/: mlflow_logger.yaml  my_settings.yaml
configs/commands/: frozen_lake_dt_ppo.yaml  frozen_lake_ppo.yaml  frozen_lake_ppo_optuna.yaml  frozen_lake_q_learning.yaml  frozen_lake_st_ppo.yaml  frozen_lake_st_q_learning.yaml  frozen_lake_tmpi.yaml
configs/experiments/: frozen_lake_dt_ppo.yaml  frozen_lake_ppo.yaml  frozen_lake_st_ppo.yaml
configs/thesis/: frozen_lake_dt_ppo.yaml  frozen_lake_ppo.yaml  frozen_lake_q_learning.yaml  frozen_lake_st_ppo.yaml  frozen_lake_st_q_learning.yaml  frozen_lake_tmpi.yaml
docs/: running-experiments.md  updating-from-template.md
docs/stylesheets/: extra.css
teleport_mdp/: __init__.py  __main__.py  constants.py  enums.py  models.py  optimizer.py  trainer.py
teleport_mdp/agents/: __init__.py  teleport_ppo.py  teleport_rollout_buffer.py
teleport_mdp/callbacks/: __init__.py  mlflow_callback.py  optuna_callback.py  progress_callback.py
teleport_mdp/commands/: run_experiment.py  run_optuna.py  run_tabular.py
teleport_mdp/curriculum/: __init__.py  scheduler.py
teleport_mdp/environments/: __init__.py  factory.py  register.py  teleport_env.py  teleport_frozen_lake.py
teleport_mdp/registries/: __init__.py  agent.py  base.py  scheduler.py
teleport_mdp/tabular/: __init__.py  bound.py  model_functions.py  q_learning.py  tmpi.py  trainer.py
teleport_mdp/utils/: device.py  frozen_lake.py  logger.py  settings.py  settings_provider.py  singleton.py
teleport_mdp/wrappers/: reward_shaping.py  tmdp.py
tests/: test_bound.py  test_config_models.py  test_device.py  test_env_factory.py  test_experiment.py  test_mlflow_callback.py  test_model_functions.py  test_optimizer.py  test_q_learning.py  test_registries.py  test_reward_shaping.py  test_scheduler.py  test_tabular_trainer.py  test_teleport_frozen_lake.py  test_teleport_ppo.py  test_teleport_rollout_buffer.py  test_tmpi.py
utils/: build_api_docs.py  commands.py  configs.py  configs_provider.py  exceptions.py  experiment_logger.py  import_helper.py  logger.py  post_checkout.py  singleton.py  update_template.py
