[project]
name = "python-repo-template"
version = "0.0.1"
description = "A template for Python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Giacometti", email = "giovanni.giacometti5@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

torch = [
    "torch==2.4.0+cu124 ; platform_system == 'Windows'",
    "torch==2.4.0 ; platform_system != 'Windows'",
    "torchvision==0.19.0+cu124 ; platform_system == 'Windows'",
    "torchvision==0.19.0 ; platform_system != 'Windows'",
]

[tool.uv.sources]
torch = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }
torchvision = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "default_pypy"
url = "https://pypi.org/simple/"
default = true
