[project]
name = "python-repo-template"
version = "0.0.1"
description = "A template for Python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Giacometti", email = "giovanni.giacometti5@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "gymnasium>=1.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "mlflow>=3.1.1",
    "optuna>=4.4.0",
    "pygame>=2.6.1",
    "polars>=1.31.0",
    "plotly>=6.2.0",
]

torch = [
    "torch==2.4.0+cu124 ; platform_system == 'Windows'",
    "torch==2.4.0 ; platform_system != 'Windows'",
    "torchvision==0.19.0+cu124 ; platform_system == 'Windows'",
    "torchvision==0.19.0 ; platform_system != 'Windows'",
]

[tool.uv.sources]
torch = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }
torchvision = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "default_pypy"
url = "https://pypi.org/simple/"
default = true
