[project]
name = "teleport-mdp"
version = "0.0.1"
description = "A template for Python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Cristian Spagnuolo", email = "cristian.c.spagnuolo@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "polars>=1.4.0,<2.0.0",
    "mlflow>=3.10.0,<3.20.0",
    "gymnasium>=1.0.0",
    "numpy>=1.26",
    "overrides>=7.7.0",
    "torch>=2.12.1",
    "stable-baselines3>=2.7,<3.0",
]

[dependency-groups]

dev = [
    "build>=1.3.0,<2.0.0",
    "mkdocs-callouts>=1.0.0,<2.0.0",
    "mkdocs-material>=9.7.6,<9.8.0",
    "properdocs>=1.6.1,<2.0.0",
    "mkdocs-gen-files>=0.6.1,<0.7.0",
    "mkdocs-literate-nav>=0.6.3,<0.7.0",
    "mkdocstrings[python]>=0.30.1,<0.31.0",
    "pre-commit>=4.3.0,<5.0.0",
    "python-semantic-release>=9.21,<10.0.0",
    "ruff>=0.15.11,<0.16.0",
    "flake8>=7.0.0,<8.0.0",
    "pydoclint[flake8]>=0.7.3,<0.9.0",
    "Flake8-pyproject>=1.2.3,<2.0.0",
    "optuna>=4.4.0",
    "pygame>=2.6.1",
    "polars>=1.31.0",
    "plotly>=6.2.0",
]

release = [
    "build>=1.3.0,<2.0.0",
    "twine>=6.2.0,<7.0.0",
]

test = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
include = ["*.py"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E", "W", "I", "F", "D", "C90", "PGH", "RUF", "DOC"]
ignore = [
    "D10",     # D100-D107: missing docstrings in public modules, classes, methods, functions, packages, magic methods, nested classes, and __init__
    "RUF010",  # explicit-f-string-type-conversion: do not require explicit !r/!s/!a conversion flags in f-strings
    "RUF067",  # non-empty-init-module: __init__ module should not contain any code — TODO: resolve and remove this ignore
    "DOC201",  # docstring-missing-returns: return value is not documented in docstring — FIXME: this line should be removed to improve documentation quality. NOTE: it may cause several linter errors across the codebase.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
include = ["teleport_mdp", "tests", "utils"]
typeCheckingMode = "basic"
reportFunctionMemberAccess = true
reportPossiblyUnboundVariable = true
reportIncompatibleMethodOverride = true

[tool.hatch.build.targets.wheel]
packages = ["teleport_mdp"]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv]
default-groups = []
package = true
extra-index-url = [
]

[tool.flake8]
style = "google"
skip-checking-short-docstrings = true
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false # NOTE: by default this is true, but contrasts with DOC201 explicitly ignored in ruff
check-arg-order = true
allow-init-docstring = true
should-document-star-arguments = true
# See https://jsh9.github.io/pydoclint/config_options.html for more details.

select = ["DOC"]
ignore = [
    "DOC111", # Complains if `--arg-type-hints-in-docstring` is `False` but there are type hints in the docstring arg list
    "DOC501", # Handled by ruff DOC501 (missing Raises in docstring)
    "DOC502", # Handled by ruff DOC502 (documented exception not raised)
    "DOC503", # Raises mismatch — covered by the combination of ruff DOC501+DOC502
]

[tool.template]
template_commit = "bb9485eaefb7c264e265ace293024547a3404695"
template_branch = "main"

